tests/test_compile/cases/catch_all_multiple.stderr
error: DekuRead: `default` must be specified only once
 --> tests/test_compile/cases/catch_all_multiple.rs:9:5
  |
9 |     B = 2,
  |     ^
